# c_struct

./: .clang-format  CMakeLists.txt  Config.cmake.in  LICENSE
include/: array.h  dy_arr.h
lib/: CMakeLists.txt  dy_arr.c
src/: array.c
test/: CMakeLists.txt  array_test.c  dy_arr_test.c
